pascal/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    ARRAY
    CASE
    DIV
    DOWNTO
    FILE
    FOR
    GOTO
    IN
    LBRACKET
    MOD
    NIL
    NOT
    OF
    OR
    PACKED
    RBRACKET
    RECORD
    REPEAT
    SET
    TO
    TYPE
    UNTIL
    WITH

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON block POINT
Rule 2     block -> labelDecl constDecl varDecl BEGIN procDecl functDecl statement END
Rule 3     labelDecl -> LABEL NUMBER SEMICOLON
Rule 4     labelDecl -> empty
Rule 5     constDecl -> empty
Rule 6     constDecl -> CONST constAssignmentList SEMICOLON
Rule 7     constAssignmentList -> ID EQ INTEGER
Rule 8     constAssignmentList -> ID EQ REAL
Rule 9     constAssignmentList -> ID EQ STRING
Rule 10    constAssignmentList -> ID EQ NUMBER
Rule 11    constAssignmentList -> ID EQ BOOLEAN
Rule 12    typeDefinition -> empty
Rule 13    typeDefinition -> INTEGER
Rule 14    typeDefinition -> REAL
Rule 15    typeDefinition -> STRING
Rule 16    typeDefinition -> BOOLEAN
Rule 17    varDecl -> empty
Rule 18    varDecl -> VAR identList COLON typeDefinition SEMICOLON identList_2
Rule 19    identList -> ID
Rule 20    identList -> identList COMMA ID
Rule 21    identList_2 -> empty
Rule 22    identList_2 -> identList COLON typeDefinition SEMICOLON identList_2
Rule 23    procDecl -> PROCEDURE ID LPAREN parameters RPAREN SEMICOLON block SEMICOLON
Rule 24    procDecl -> empty
Rule 25    functDecl -> empty
Rule 26    functDecl -> FUNCTION ID LPAREN parameters RPAREN COLON typeDefinition SEMICOLON block SEMICOLON
Rule 27    parameterList -> empty
Rule 28    parameters -> parameterList
Rule 29    parameterList -> parameterList SEMICOLON parameter
Rule 30    parameterList -> parameter
Rule 31    parameter -> ID COLON typeDefinition
Rule 32    parameter -> ID COMMA parameter
Rule 33    parameter -> COLON typeDefinition
Rule 34    statement -> empty
Rule 35    statement -> statement ID EQUALS expression SEMICOLON
Rule 36    statement -> BEGIN statementList END
Rule 37    statement -> statement IF condition THEN statement
Rule 38    statement -> statement IF condition THEN statement ELSE statement
Rule 39    statement -> WHILE condition DO statement
Rule 40    statementList -> statement
Rule 41    statementList -> statementList SEMICOLON statement
Rule 42    condition -> expression relation expression
Rule 43    relation -> EQUALS
Rule 44    relation -> LT
Rule 45    relation -> LE
Rule 46    relation -> GT
Rule 47    relation -> GE
Rule 48    relation -> EQ
Rule 49    relation -> NEQ
Rule 50    expression -> term
Rule 51    expression -> addOperator term
Rule 52    expression -> expression addOperator term
Rule 53    addOperator -> PLUS
Rule 54    addOperator -> MINUS
Rule 55    term -> factor
Rule 56    term -> term multOperator factor
Rule 57    multOperator -> TIMES
Rule 58    multOperator -> DIVIDE
Rule 59    factor -> ID
Rule 60    factor -> REAL
Rule 61    factor -> INTEGER
Rule 62    factor -> LPAREN expression RPAREN
Rule 63    factor -> NUMBER
Rule 64    factor -> BOOLEAN
Rule 65    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
ARRAY                : 
BEGIN                : 2 36
BOOLEAN              : 11 16 64
CASE                 : 
COLON                : 18 22 26 31 33
COMMA                : 20 32
CONST                : 6
DIV                  : 
DIVIDE               : 58
DO                   : 39
DOWNTO               : 
ELSE                 : 38
END                  : 2 36
EQ                   : 7 8 9 10 11 48
EQUALS               : 35 43
FILE                 : 
FOR                  : 
FUNCTION             : 26
GE                   : 47
GOTO                 : 
GT                   : 46
ID                   : 1 7 8 9 10 11 19 20 23 26 31 32 35 59
IF                   : 37 38
IN                   : 
INTEGER              : 7 13 61
LABEL                : 3
LBRACKET             : 
LE                   : 45
LPAREN               : 23 26 62
LT                   : 44
MINUS                : 54
MOD                  : 
NEQ                  : 49
NIL                  : 
NOT                  : 
NUMBER               : 3 10 63
OF                   : 
OR                   : 
PACKED               : 
PLUS                 : 53
POINT                : 1
PROCEDURE            : 23
PROGRAM              : 1
RBRACKET             : 
REAL                 : 8 14 60
RECORD               : 
REPEAT               : 
RPAREN               : 23 26 62
SEMICOLON            : 1 3 6 18 22 23 23 26 26 29 35 41
SET                  : 
STRING               : 9 15
THEN                 : 37 38
TIMES                : 57
TO                   : 
TYPE                 : 
UNTIL                : 
VAR                  : 18
WHILE                : 39
WITH                 : 
error                : 

Nonterminals, with rules where they appear

addOperator          : 51 52
block                : 1 23 26
condition            : 37 38 39
constAssignmentList  : 6
constDecl            : 2
empty                : 4 5 12 17 21 24 25 27 34
expression           : 35 42 42 52 62
factor               : 55 56
functDecl            : 2
identList            : 18 20 22
identList_2          : 18 22
labelDecl            : 2
multOperator         : 56
parameter            : 29 30 32
parameterList        : 28 29
parameters           : 23 26
procDecl             : 2
program              : 0
relation             : 42
statement            : 2 35 37 37 38 38 38 39 40 41
statementList        : 36 41
term                 : 50 51 52 56
typeDefinition       : 18 22 26 31 33
varDecl              : 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON block POINT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON block POINT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON block POINT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . block POINT
    (2) block -> . labelDecl constDecl varDecl BEGIN procDecl functDecl statement END
    (3) labelDecl -> . LABEL NUMBER SEMICOLON
    (4) labelDecl -> . empty
    (65) empty -> .

    LABEL           shift and go to state 7
    CONST           reduce using rule 65 (empty -> .)
    VAR             reduce using rule 65 (empty -> .)
    BEGIN           reduce using rule 65 (empty -> .)

    block                          shift and go to state 5
    labelDecl                      shift and go to state 6
    empty                          shift and go to state 8

state 5

    (1) program -> PROGRAM ID SEMICOLON block . POINT

    POINT           shift and go to state 9


state 6

    (2) block -> labelDecl . constDecl varDecl BEGIN procDecl functDecl statement END
    (5) constDecl -> . empty
    (6) constDecl -> . CONST constAssignmentList SEMICOLON
    (65) empty -> .

    CONST           shift and go to state 12
    VAR             reduce using rule 65 (empty -> .)
    BEGIN           reduce using rule 65 (empty -> .)

    constDecl                      shift and go to state 10
    empty                          shift and go to state 11

state 7

    (3) labelDecl -> LABEL . NUMBER SEMICOLON

    NUMBER          shift and go to state 13


state 8

    (4) labelDecl -> empty .

    CONST           reduce using rule 4 (labelDecl -> empty .)
    VAR             reduce using rule 4 (labelDecl -> empty .)
    BEGIN           reduce using rule 4 (labelDecl -> empty .)


state 9

    (1) program -> PROGRAM ID SEMICOLON block POINT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON block POINT .)


state 10

    (2) block -> labelDecl constDecl . varDecl BEGIN procDecl functDecl statement END
    (17) varDecl -> . empty
    (18) varDecl -> . VAR identList COLON typeDefinition SEMICOLON identList_2
    (65) empty -> .

    VAR             shift and go to state 16
    BEGIN           reduce using rule 65 (empty -> .)

    varDecl                        shift and go to state 14
    empty                          shift and go to state 15

state 11

    (5) constDecl -> empty .

    VAR             reduce using rule 5 (constDecl -> empty .)
    BEGIN           reduce using rule 5 (constDecl -> empty .)


state 12

    (6) constDecl -> CONST . constAssignmentList SEMICOLON
    (7) constAssignmentList -> . ID EQ INTEGER
    (8) constAssignmentList -> . ID EQ REAL
    (9) constAssignmentList -> . ID EQ STRING
    (10) constAssignmentList -> . ID EQ NUMBER
    (11) constAssignmentList -> . ID EQ BOOLEAN

    ID              shift and go to state 18

    constAssignmentList            shift and go to state 17

state 13

    (3) labelDecl -> LABEL NUMBER . SEMICOLON

    SEMICOLON       shift and go to state 19


state 14

    (2) block -> labelDecl constDecl varDecl . BEGIN procDecl functDecl statement END

    BEGIN           shift and go to state 20


state 15

    (17) varDecl -> empty .

    BEGIN           reduce using rule 17 (varDecl -> empty .)


state 16

    (18) varDecl -> VAR . identList COLON typeDefinition SEMICOLON identList_2
    (19) identList -> . ID
    (20) identList -> . identList COMMA ID

    ID              shift and go to state 22

    identList                      shift and go to state 21

state 17

    (6) constDecl -> CONST constAssignmentList . SEMICOLON

    SEMICOLON       shift and go to state 23


state 18

    (7) constAssignmentList -> ID . EQ INTEGER
    (8) constAssignmentList -> ID . EQ REAL
    (9) constAssignmentList -> ID . EQ STRING
    (10) constAssignmentList -> ID . EQ NUMBER
    (11) constAssignmentList -> ID . EQ BOOLEAN

    EQ              shift and go to state 24


state 19

    (3) labelDecl -> LABEL NUMBER SEMICOLON .

    CONST           reduce using rule 3 (labelDecl -> LABEL NUMBER SEMICOLON .)
    VAR             reduce using rule 3 (labelDecl -> LABEL NUMBER SEMICOLON .)
    BEGIN           reduce using rule 3 (labelDecl -> LABEL NUMBER SEMICOLON .)


state 20

    (2) block -> labelDecl constDecl varDecl BEGIN . procDecl functDecl statement END
    (23) procDecl -> . PROCEDURE ID LPAREN parameters RPAREN SEMICOLON block SEMICOLON
    (24) procDecl -> . empty
    (65) empty -> .

    PROCEDURE       shift and go to state 26
    FUNCTION        reduce using rule 65 (empty -> .)
    BEGIN           reduce using rule 65 (empty -> .)
    WHILE           reduce using rule 65 (empty -> .)
    END             reduce using rule 65 (empty -> .)
    ID              reduce using rule 65 (empty -> .)
    IF              reduce using rule 65 (empty -> .)

    procDecl                       shift and go to state 25
    empty                          shift and go to state 27

state 21

    (18) varDecl -> VAR identList . COLON typeDefinition SEMICOLON identList_2
    (20) identList -> identList . COMMA ID

    COLON           shift and go to state 28
    COMMA           shift and go to state 29


state 22

    (19) identList -> ID .

    COLON           reduce using rule 19 (identList -> ID .)
    COMMA           reduce using rule 19 (identList -> ID .)


state 23

    (6) constDecl -> CONST constAssignmentList SEMICOLON .

    VAR             reduce using rule 6 (constDecl -> CONST constAssignmentList SEMICOLON .)
    BEGIN           reduce using rule 6 (constDecl -> CONST constAssignmentList SEMICOLON .)


state 24

    (7) constAssignmentList -> ID EQ . INTEGER
    (8) constAssignmentList -> ID EQ . REAL
    (9) constAssignmentList -> ID EQ . STRING
    (10) constAssignmentList -> ID EQ . NUMBER
    (11) constAssignmentList -> ID EQ . BOOLEAN

    INTEGER         shift and go to state 30
    REAL            shift and go to state 31
    STRING          shift and go to state 32
    NUMBER          shift and go to state 33
    BOOLEAN         shift and go to state 34


state 25

    (2) block -> labelDecl constDecl varDecl BEGIN procDecl . functDecl statement END
    (25) functDecl -> . empty
    (26) functDecl -> . FUNCTION ID LPAREN parameters RPAREN COLON typeDefinition SEMICOLON block SEMICOLON
    (65) empty -> .

    FUNCTION        shift and go to state 37
    BEGIN           reduce using rule 65 (empty -> .)
    WHILE           reduce using rule 65 (empty -> .)
    END             reduce using rule 65 (empty -> .)
    ID              reduce using rule 65 (empty -> .)
    IF              reduce using rule 65 (empty -> .)

    functDecl                      shift and go to state 35
    empty                          shift and go to state 36

state 26

    (23) procDecl -> PROCEDURE . ID LPAREN parameters RPAREN SEMICOLON block SEMICOLON

    ID              shift and go to state 38


state 27

    (24) procDecl -> empty .

    FUNCTION        reduce using rule 24 (procDecl -> empty .)
    BEGIN           reduce using rule 24 (procDecl -> empty .)
    WHILE           reduce using rule 24 (procDecl -> empty .)
    END             reduce using rule 24 (procDecl -> empty .)
    ID              reduce using rule 24 (procDecl -> empty .)
    IF              reduce using rule 24 (procDecl -> empty .)


state 28

    (18) varDecl -> VAR identList COLON . typeDefinition SEMICOLON identList_2
    (12) typeDefinition -> . empty
    (13) typeDefinition -> . INTEGER
    (14) typeDefinition -> . REAL
    (15) typeDefinition -> . STRING
    (16) typeDefinition -> . BOOLEAN
    (65) empty -> .

    INTEGER         shift and go to state 41
    REAL            shift and go to state 42
    STRING          shift and go to state 43
    BOOLEAN         shift and go to state 44
    SEMICOLON       reduce using rule 65 (empty -> .)

    typeDefinition                 shift and go to state 39
    empty                          shift and go to state 40

state 29

    (20) identList -> identList COMMA . ID

    ID              shift and go to state 45


state 30

    (7) constAssignmentList -> ID EQ INTEGER .

    SEMICOLON       reduce using rule 7 (constAssignmentList -> ID EQ INTEGER .)


state 31

    (8) constAssignmentList -> ID EQ REAL .

    SEMICOLON       reduce using rule 8 (constAssignmentList -> ID EQ REAL .)


state 32

    (9) constAssignmentList -> ID EQ STRING .

    SEMICOLON       reduce using rule 9 (constAssignmentList -> ID EQ STRING .)


state 33

    (10) constAssignmentList -> ID EQ NUMBER .

    SEMICOLON       reduce using rule 10 (constAssignmentList -> ID EQ NUMBER .)


state 34

    (11) constAssignmentList -> ID EQ BOOLEAN .

    SEMICOLON       reduce using rule 11 (constAssignmentList -> ID EQ BOOLEAN .)


state 35

    (2) block -> labelDecl constDecl varDecl BEGIN procDecl functDecl . statement END
    (34) statement -> . empty
    (35) statement -> . statement ID EQUALS expression SEMICOLON
    (36) statement -> . BEGIN statementList END
    (37) statement -> . statement IF condition THEN statement
    (38) statement -> . statement IF condition THEN statement ELSE statement
    (39) statement -> . WHILE condition DO statement
    (65) empty -> .

    BEGIN           shift and go to state 46
    WHILE           shift and go to state 49
    END             reduce using rule 65 (empty -> .)
    ID              reduce using rule 65 (empty -> .)
    IF              reduce using rule 65 (empty -> .)

    statement                      shift and go to state 47
    empty                          shift and go to state 48

state 36

    (25) functDecl -> empty .

    BEGIN           reduce using rule 25 (functDecl -> empty .)
    WHILE           reduce using rule 25 (functDecl -> empty .)
    END             reduce using rule 25 (functDecl -> empty .)
    ID              reduce using rule 25 (functDecl -> empty .)
    IF              reduce using rule 25 (functDecl -> empty .)


state 37

    (26) functDecl -> FUNCTION . ID LPAREN parameters RPAREN COLON typeDefinition SEMICOLON block SEMICOLON

    ID              shift and go to state 50


state 38

    (23) procDecl -> PROCEDURE ID . LPAREN parameters RPAREN SEMICOLON block SEMICOLON

    LPAREN          shift and go to state 51


state 39

    (18) varDecl -> VAR identList COLON typeDefinition . SEMICOLON identList_2

    SEMICOLON       shift and go to state 52


state 40

    (12) typeDefinition -> empty .

    SEMICOLON       reduce using rule 12 (typeDefinition -> empty .)
    RPAREN          reduce using rule 12 (typeDefinition -> empty .)


state 41

    (13) typeDefinition -> INTEGER .

    SEMICOLON       reduce using rule 13 (typeDefinition -> INTEGER .)
    RPAREN          reduce using rule 13 (typeDefinition -> INTEGER .)


state 42

    (14) typeDefinition -> REAL .

    SEMICOLON       reduce using rule 14 (typeDefinition -> REAL .)
    RPAREN          reduce using rule 14 (typeDefinition -> REAL .)


state 43

    (15) typeDefinition -> STRING .

    SEMICOLON       reduce using rule 15 (typeDefinition -> STRING .)
    RPAREN          reduce using rule 15 (typeDefinition -> STRING .)


state 44

    (16) typeDefinition -> BOOLEAN .

    SEMICOLON       reduce using rule 16 (typeDefinition -> BOOLEAN .)
    RPAREN          reduce using rule 16 (typeDefinition -> BOOLEAN .)


state 45

    (20) identList -> identList COMMA ID .

    COLON           reduce using rule 20 (identList -> identList COMMA ID .)
    COMMA           reduce using rule 20 (identList -> identList COMMA ID .)


state 46

    (36) statement -> BEGIN . statementList END
    (40) statementList -> . statement
    (41) statementList -> . statementList SEMICOLON statement
    (34) statement -> . empty
    (35) statement -> . statement ID EQUALS expression SEMICOLON
    (36) statement -> . BEGIN statementList END
    (37) statement -> . statement IF condition THEN statement
    (38) statement -> . statement IF condition THEN statement ELSE statement
    (39) statement -> . WHILE condition DO statement
    (65) empty -> .

    BEGIN           shift and go to state 46
    WHILE           shift and go to state 49
    ID              reduce using rule 65 (empty -> .)
    IF              reduce using rule 65 (empty -> .)
    END             reduce using rule 65 (empty -> .)
    SEMICOLON       reduce using rule 65 (empty -> .)

    statementList                  shift and go to state 53
    statement                      shift and go to state 54
    empty                          shift and go to state 48

state 47

    (2) block -> labelDecl constDecl varDecl BEGIN procDecl functDecl statement . END
    (35) statement -> statement . ID EQUALS expression SEMICOLON
    (37) statement -> statement . IF condition THEN statement
    (38) statement -> statement . IF condition THEN statement ELSE statement

    END             shift and go to state 55
    ID              shift and go to state 56
    IF              shift and go to state 57


state 48

    (34) statement -> empty .

    END             reduce using rule 34 (statement -> empty .)
    ID              reduce using rule 34 (statement -> empty .)
    IF              reduce using rule 34 (statement -> empty .)
    SEMICOLON       reduce using rule 34 (statement -> empty .)
    ELSE            reduce using rule 34 (statement -> empty .)


state 49

    (39) statement -> WHILE . condition DO statement
    (42) condition -> . expression relation expression
    (50) expression -> . term
    (51) expression -> . addOperator term
    (52) expression -> . expression addOperator term
    (55) term -> . factor
    (56) term -> . term multOperator factor
    (53) addOperator -> . PLUS
    (54) addOperator -> . MINUS
    (59) factor -> . ID
    (60) factor -> . REAL
    (61) factor -> . INTEGER
    (62) factor -> . LPAREN expression RPAREN
    (63) factor -> . NUMBER
    (64) factor -> . BOOLEAN

    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    ID              shift and go to state 65
    REAL            shift and go to state 66
    INTEGER         shift and go to state 67
    LPAREN          shift and go to state 68
    NUMBER          shift and go to state 69
    BOOLEAN         shift and go to state 70

    condition                      shift and go to state 58
    expression                     shift and go to state 59
    term                           shift and go to state 60
    addOperator                    shift and go to state 61
    factor                         shift and go to state 62

state 50

    (26) functDecl -> FUNCTION ID . LPAREN parameters RPAREN COLON typeDefinition SEMICOLON block SEMICOLON

    LPAREN          shift and go to state 71


state 51

    (23) procDecl -> PROCEDURE ID LPAREN . parameters RPAREN SEMICOLON block SEMICOLON
    (28) parameters -> . parameterList
    (27) parameterList -> . empty
    (29) parameterList -> . parameterList SEMICOLON parameter
    (30) parameterList -> . parameter
    (65) empty -> .
    (31) parameter -> . ID COLON typeDefinition
    (32) parameter -> . ID COMMA parameter
    (33) parameter -> . COLON typeDefinition

    SEMICOLON       reduce using rule 65 (empty -> .)
    RPAREN          reduce using rule 65 (empty -> .)
    ID              shift and go to state 72
    COLON           shift and go to state 77

    parameters                     shift and go to state 73
    parameterList                  shift and go to state 74
    empty                          shift and go to state 75
    parameter                      shift and go to state 76

state 52

    (18) varDecl -> VAR identList COLON typeDefinition SEMICOLON . identList_2
    (21) identList_2 -> . empty
    (22) identList_2 -> . identList COLON typeDefinition SEMICOLON identList_2
    (65) empty -> .
    (19) identList -> . ID
    (20) identList -> . identList COMMA ID

    BEGIN           reduce using rule 65 (empty -> .)
    ID              shift and go to state 22

    identList                      shift and go to state 78
    identList_2                    shift and go to state 79
    empty                          shift and go to state 80

state 53

    (36) statement -> BEGIN statementList . END
    (41) statementList -> statementList . SEMICOLON statement

    END             shift and go to state 81
    SEMICOLON       shift and go to state 82


state 54

    (40) statementList -> statement .
    (35) statement -> statement . ID EQUALS expression SEMICOLON
    (37) statement -> statement . IF condition THEN statement
    (38) statement -> statement . IF condition THEN statement ELSE statement

    END             reduce using rule 40 (statementList -> statement .)
    SEMICOLON       reduce using rule 40 (statementList -> statement .)
    ID              shift and go to state 56
    IF              shift and go to state 57


state 55

    (2) block -> labelDecl constDecl varDecl BEGIN procDecl functDecl statement END .

    POINT           reduce using rule 2 (block -> labelDecl constDecl varDecl BEGIN procDecl functDecl statement END .)
    SEMICOLON       reduce using rule 2 (block -> labelDecl constDecl varDecl BEGIN procDecl functDecl statement END .)


state 56

    (35) statement -> statement ID . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 83


state 57

    (37) statement -> statement IF . condition THEN statement
    (38) statement -> statement IF . condition THEN statement ELSE statement
    (42) condition -> . expression relation expression
    (50) expression -> . term
    (51) expression -> . addOperator term
    (52) expression -> . expression addOperator term
    (55) term -> . factor
    (56) term -> . term multOperator factor
    (53) addOperator -> . PLUS
    (54) addOperator -> . MINUS
    (59) factor -> . ID
    (60) factor -> . REAL
    (61) factor -> . INTEGER
    (62) factor -> . LPAREN expression RPAREN
    (63) factor -> . NUMBER
    (64) factor -> . BOOLEAN

    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    ID              shift and go to state 65
    REAL            shift and go to state 66
    INTEGER         shift and go to state 67
    LPAREN          shift and go to state 68
    NUMBER          shift and go to state 69
    BOOLEAN         shift and go to state 70

    condition                      shift and go to state 84
    expression                     shift and go to state 59
    term                           shift and go to state 60
    addOperator                    shift and go to state 61
    factor                         shift and go to state 62

state 58

    (39) statement -> WHILE condition . DO statement

    DO              shift and go to state 85


state 59

    (42) condition -> expression . relation expression
    (52) expression -> expression . addOperator term
    (43) relation -> . EQUALS
    (44) relation -> . LT
    (45) relation -> . LE
    (46) relation -> . GT
    (47) relation -> . GE
    (48) relation -> . EQ
    (49) relation -> . NEQ
    (53) addOperator -> . PLUS
    (54) addOperator -> . MINUS

    EQUALS          shift and go to state 88
    LT              shift and go to state 89
    LE              shift and go to state 90
    GT              shift and go to state 91
    GE              shift and go to state 92
    EQ              shift and go to state 93
    NEQ             shift and go to state 94
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64

    relation                       shift and go to state 86
    addOperator                    shift and go to state 87

state 60

    (50) expression -> term .
    (56) term -> term . multOperator factor
    (57) multOperator -> . TIMES
    (58) multOperator -> . DIVIDE

    EQUALS          reduce using rule 50 (expression -> term .)
    LT              reduce using rule 50 (expression -> term .)
    LE              reduce using rule 50 (expression -> term .)
    GT              reduce using rule 50 (expression -> term .)
    GE              reduce using rule 50 (expression -> term .)
    EQ              reduce using rule 50 (expression -> term .)
    NEQ             reduce using rule 50 (expression -> term .)
    PLUS            reduce using rule 50 (expression -> term .)
    MINUS           reduce using rule 50 (expression -> term .)
    RPAREN          reduce using rule 50 (expression -> term .)
    SEMICOLON       reduce using rule 50 (expression -> term .)
    DO              reduce using rule 50 (expression -> term .)
    THEN            reduce using rule 50 (expression -> term .)
    TIMES           shift and go to state 96
    DIVIDE          shift and go to state 97

    multOperator                   shift and go to state 95

state 61

    (51) expression -> addOperator . term
    (55) term -> . factor
    (56) term -> . term multOperator factor
    (59) factor -> . ID
    (60) factor -> . REAL
    (61) factor -> . INTEGER
    (62) factor -> . LPAREN expression RPAREN
    (63) factor -> . NUMBER
    (64) factor -> . BOOLEAN

    ID              shift and go to state 65
    REAL            shift and go to state 66
    INTEGER         shift and go to state 67
    LPAREN          shift and go to state 68
    NUMBER          shift and go to state 69
    BOOLEAN         shift and go to state 70
